--- a/main.css
+++ b/main.css
@@ -30,11 +30,13 @@ hr {
 }
 
 #quote {
+    color: lightskyblue;
     font-size: 20px;
     font-weight: bold;
 }
 
 #author {
+    color: lightskyblue;
     font-size: 14px;
     font-style: italic;
     margin-top: 10px;
